[gd_scene load_steps=6 format=3 uid="uid://dqkbm4k1if4ml"]

[ext_resource type="Script" uid="uid://dnqj0emxokm3w" path="res://scripts/alarm_effects.gd" id="1_liscq"]
[ext_resource type="AudioStream" uid="uid://ca8krs0kmx5to" path="res://assets/sounds/alarm.wav" id="2_nlqk0"]

[sub_resource type="Animation" id="Animation_adq52"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.3)]
}

[sub_resource type="Animation" id="Animation_nlqk0"]
resource_name = "blare"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.3), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kc5j"]
_data = {
&"RESET": SubResource("Animation_adq52"),
&"blare": SubResource("Animation_nlqk0")
}

[node name="AlarmEffects" type="Node2D"]
script = ExtResource("1_liscq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0kc5j")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.3)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -179.5
offset_right = 320.0
offset_bottom = 179.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AlarmSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_nlqk0")

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
